[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["GhosteLLoS <123022357+GhosteLLoS@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
conf = "^0.4.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mysql-connector-python = "^8.1.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.7"
bcrypt = "^4.0.1"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
